2004-12-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print-config.c (gp_config_get_length): fixed
	  GnomePrintUnit <-> Ruby object bug.
	  (gp_config_set_length): ditto.

	* src/rbgp-gnome-print-unit.c: changed PrintUnit#convert_distance
	  to generic method.

2004-12-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print-unit.c: added fallbacks.

2004-12-10  Kouhei Sutou  <kou@cozmixng.org>

	* sample/to_file.rb (Renderer::draw_arc): fixed wrong
	  Gnome::PrintContext#set_rbg_color argument.

2004-12-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/gnomeprint2.rb: removed backward compatibility for Rabbit
	  0.0.5. (It wasn't backward compatibility for typo...)

	* src/rbgp-gnome-print-paper.c (gp_paper_get_generic): fixed wrong
	  arg number bug pointed by Kazuhiko <kazuhiko@fdiary.net>. Thanks!

2004-11-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print.c (Init_gnome_print): Adapted
	  Gnome::PrintReturnCode to GEnum/GFlags policy of Ruby-GNOME2.

	* src/rbgp-gnome-print-unit.c (Init_gnome_print_unit): Adapted
	  Gnome::PrintUnitBase to GEnum/GFlags policy of Ruby-GNOME2.

2004-11-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/gnomeprint2.rb: added backward compatibility for Rabbit
	  0.0.5.

2004-10-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gpa-printer.c: added G_DEF_SETTERS.

	* src/rbgp-gpa-node.c: added G_DEF_SETTERS.

	* src/rbgp-gpa-printer.c (GPAPrinter.list_load: removed.

	* src/rbgp-gpa-state.c: added.

	* src/rbgp-gpa-list.c: added.

	* src/lib/gnomeprint2.rb: added backward compatibility for Rabbit
	  0.0.5.

	* src/* (Init_*): removed mGP.
	
	* src/rbgp-gpa-settings.c: added.

	* src/rbgp-gpa-root.c: added.

	* src/rbgp-gpa-printer.c: added.

	* src/rbgp-gpa-node.c: added.

	* src/rbgp-gpa-model.c: added.
	

2004-10-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/gnomeprint2.rb: called GLib::Log.set_log_domain.

	* extconf.rb: used PKGConfig.have_pacakge instead of
	  PKGConfig.or_newer?.
