@@ -1,44 +1,20 @@
 =begin
 extconf.rb for Ruby/GnomePrint extention library
 =end
+PACKAGE_NAME = "gnomeprint2"
 
-$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__) + '/../glib/src/lib')
+TOPDIR = File.expand_path(File.dirname(__FILE__) + '/..')
+MKMF_GNOME2_DIR = TOPDIR + '/glib/src/lib'
+SRCDIR = TOPDIR + '/gnomeprint/src'
+
+$LOAD_PATH.unshift MKMF_GNOME2_DIR
+
 require 'mkmf-gnome2'
 
-pkg_infos   = [
-  ['libgnomeprint-2.2', [2, 8]],
-]
+PKGConfig.have_package("libgnomeprint-2.2", 2, 8) or exit 1
+setup_win32(PACKAGE_NAME)
 
-pkg_infos.each do |name, version|
-	PKGConfig.have_package(name, *version) or exit 1
-end
+add_depend_package("glib2", "glib/src", TOPDIR)
 
-check_win32
-
-top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
-$CFLAGS += " " + ['glib/src'].map{|d|
-  "-I" + File.join(top, d)
-}.join(" ")
-
-if /cygwin|mingw/ =~ RUBY_PLATFORM
-  top = "../.."
-  [
-    ["glib/src", "ruby-glib2"],
-  ].each{|d,l|
-    $libs << " -l#{l}"
-    $LDFLAGS << " -L#{top}/#{d}"
-  }
-end
-
-srcdir = File.dirname($0) == "." ? "." :
-  File.expand_path(File.dirname($0) + "/src")
-
-Dir.mkdir('src') unless File.exist? 'src'
-Dir.chdir "src"
-begin
-  create_makefile("gnomeprint2", srcdir)
-ensure
-  Dir.chdir('..')
-end
-
+create_makefile_at_srcdir(PACKAGE_NAME, SRCDIR, "-DRUBY_GNOMEPRINT2_COMPILATION")
 create_top_makefile
