@@ -1,3 +1,7 @@
+2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* extconf.rb: Follow mkmf-gnome2.rb changes. 
+
 2004-12-16  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbgp-gnome-print-config.c (gp_config_get_length): fixed
